--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Botenrace</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Botenrace</h1>
+    <canvas id="raceCanvas" width="800" height="400"></canvas>
+    <script src="script.js"></script>
+</body>
+</html>
 
