--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botenrace</title>
+    <title>BootspelAlpha</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Botenrace</h1>
+    <h1>BootspelAlpha</h1>
     <canvas id="raceCanvas" width="800" height="400"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
-
