--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
     <h1>BootspelAlpha</h1>
     <canvas id="raceCanvas" width="800" height="400"></canvas>
+
+    <!-- Knoppen -->
+    <div class="controls">
+        <button id="moveBoat1">Beweeg Boot 1</button>
+        <button id="moveBoat2">Beweeg Boot 2</button>
+        <button id="moveBoat3">Beweeg Boot 3</button>
+        <button id="moveBoat4">Beweeg Boot 4</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
