--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <!-- Knoppen -->
     <div class="controls">
-        <button id="moveBoat1">Beweeg Boot 1</button>
-        <button id="moveBoat2">Beweeg Boot 2</button>
-        <button id="moveBoat3">Beweeg Boot 3</button>
-        <button id="moveBoat4">Beweeg Boot 4</button>
+        <button id="moveBoat1">1</button>
+        <button id="moveBoat2">2</button>
+        <button id="moveBoat3">3</button>
+        <button id="moveBoat4">4</button>
     </div>
 
     <script src="script.js"></script>
