--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <label for="numClicks">Aantal klikken per boot (1-25):</label>
         <input type="number" id="numClicks" min="1" max="25" value="10">
 
-        <button id="startGame">Start Spel</button>
+        <!-- Startknop onderaan de invoervelden -->
+        <button id="startGame" class="start-btn">Start Spel</button>
     </div>
 
     <!-- Speelscherm -->
