--- a/index.html
+++ b/index.html
@@ -3,8 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boot Race</title>
+    <title>Boot Race Spel</title>
+    <link rel="stylesheet" href="style.css">
     <style>
+        /* Voeg hier je aangepaste CSS in */
+        #winnerMessage {
+            display: none;  /* Begin als verborgen */
+            position: fixed; /* Maak het een overlay */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);  /* Donkere achtergrond voor overlay */
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            text-align: center;
+            z-index: 10;  /* Zorg ervoor dat het bovenop de canvas komt */
+        }
+
+        #winnerText {
+            background-color: rgba(0, 0, 0, 0.7);  /* Nog een donkerdere achtergrond voor het tekstvak */
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 32px;
+            text-align: center;
+        }
+
+        #resetGame {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #resetGame:hover {
+            background-color: #0056b3;
+        }
+
+        #startScreen, #gameScreen {
+            display: none;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -12,52 +58,46 @@
         }
 
         canvas {
-            display: block;
-            margin: 0 auto;
+            border: 2px solid #000;
         }
 
-        #startScreen, #gameScreen, #winnerMessage {
-            display: none;
+        .controls {
+            margin-top: 20px;
             text-align: center;
         }
 
-        button {
-            margin: 10px;
+        .controls button {
+            margin-right: 10px;
             padding: 10px;
             font-size: 16px;
-        }
-
-        #winnerMessage {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 20px;
-            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
+    <!-- Startscherm -->
     <div id="startScreen">
-        <h1>Boot Race</h1>
-        <label for="numBoats">Aantal boten (1-25):</label>
-        <input type="number" id="numBoats" min="1" max="25" value="2"><br><br>
-        <label for="numClicks">Aantal kliks per boot (1-25):</label>
-        <input type="number" id="numClicks" min="1" max="25" value="10"><br><br>
-        <button id="startGame">Start Game</button>
+        <h1>Boot Race Spel</h1>
+        <label for="numBoats">Aantal boten (1-25): </label>
+        <input type="number" id="numBoats" min="1" max="25" value="2">
+        <br>
+        <label for="numClicks">Aantal klikken per boot (1-25): </label>
+        <input type="number" id="numClicks" min="1" max="25" value="10">
+        <br><br>
+        <button id="startGame">Start Spel</button>
     </div>
 
+    <!-- Spelscherm -->
     <div id="gameScreen">
         <canvas id="raceCanvas"></canvas>
-        <div id="controls"></div>
+        <div id="controls" class="controls"></div>
     </div>
 
+    <!-- Winnaars scherm -->
     <div id="winnerMessage">
-        <h2 id="winnerText"></h2>
-        <button id="resetGame">Reset</button>
+        <div id="winnerText"></div>
+        <button id="resetGame">Reset Spel</button>
     </div>
 
     <script src="script.js"></script>
